--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,41 @@ theme: jekyll-theme-leap-day
 
 # Name of website
 title: QGIS Norge Brukergruppe
+
+# Important: you must keep the "name" parameter, everything else you can remove
+author:
+  name: QGIS Norge
+  #email: "youremail@domain.com"
+  #facebook: yourname  # eg. daattali
+  github: qgisnorge    # eg. daattali
+  #twitter: yourname   # eg. daattali
+  #reddit: yourname    # eg. daattali
+  #google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
+  #linkedin: yourname  # eg. daattali
+  #xing: yourname      # eg. daattali
+  #stackoverflow: yourlink  # eg. "3943160/daattali"
+  #snapchat: yourname  # eg. daattali
+  #instagram: yourname # eg. daattali
+  #youtube: yourlink   # eg. user/daattali or channel/daattali
+  #spotify: yourname   # eg. daattali
+  #telephone: yourphone   # eg. +14159998888
+
+# Select which links to show in the footer
+footer-links-active:
+  rss: false
+  facebook: false
+  email: false
+  twitter: false
+  google-plus: false
+  github: true
+  reddit: false
+  linkedin: false
+  xing: false
+  stackoverflow: false
+  snapchat: false
+  instagram: false
+  youtube: false
+  spotify: false
+  telephone: false
+
+
