--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ url-pretty: "qgis.no"
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "qgisnorge-github-io"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
