--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
   QGIS Norge:
     - Om QGIS Norge: "omoss"
     - Vedtekter: "vedtekter"
+    - Brukere i Norge: "brukere"
   Aktiviteter: "aktiviteter"
   Bli med: "blimed"
   Resurser:
@@ -37,7 +38,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/qgis-nor-icon.svg"
+avatar: "/img/qgis-icon.svg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -84,10 +85,10 @@ footer-links-active:
 
 # Select which share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  google: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  google: false
+  linkedin: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
