--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://qgisnorge.github.io"
+url: "http://qgisnorge.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -38,11 +38,11 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/qgis-nor-icon.svg"
+avatar: "/img/qgis-nor-icon.svg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-title-img: "/img/qgis-nor-icon.svg"
+# title-img: /path/to/image
 
 # --- Footer options --- #
 
